-
Type:
Bug
-
Status: Resolved
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: Impala 2.3.0
-
Fix Version/s: Impala 2.3.0, Impala 2.2.8
-
Component/s: None
-
Labels:
-
Target Version:
Impala Commit Git Hash: af46f26
DB: Functional
Query:
SELECT COALESCE(COALESCE(366, NULL, 668), LEAD(225, 20) OVER (ORDER BY t1.int_col DESC, t1.string_col DESC)) AS int_col FROM alltypesagg t1 WHERE (t1.int_col) IN (SELECT -95.27 AS decimal_col FROM alltypesagg t1 CROSS JOIN alltypesagg t2)
This query causes a crash every time I run it, so it's easy to reproduce.
Stack Trace:
__GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56 56 ../nptl/sysdeps/unix/sysv/linux/raise.c: No such file or directory. __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56 __GI_abort () at abort.c:89 google::DumpStackTraceAndExit () at src/utilities.cc:147 google::LogMessage::Fail () at src/logging.cc:1315 google::LogMessage::SendToLog (this=0x7f3e52a28450) at src/logging.cc:1269 google::LogMessage::Flush (this=this@entry=0x7f3e52a28450) at src/logging.cc:1138 google::LogMessageFatal::~LogMessageFatal (this=0x7f3e52a28450, __in_chrg=) at src/logging.cc:1836 impala::BufferedTupleStream::RowIdx::set (this=0x13cae000, block=0, offset=0, idx=16777216) at /home/dev/Impala/be/src/runtime/buffered-tuple-stream.h:146 impala::BufferedTupleStream::GetNextInternal (this=0x123e4000, batch=0x7f3e52a287d0, eos=0x7f3e52a28730, indices=0x7f3e52a28660) at /home/dev/Impala/be/src/runtime/buffered-tuple-stream.cc:525 impala::BufferedTupleStream::GetNext (this=0x123e4000, batch=0x7f3e52a287d0, eos=0x7f3e52a28730, indices=0x0) at /home/dev/Impala/be/src/runtime/buffered-tuple-stream.cc:452 impala::PartitionedHashJoinNode::ProcessBuildInput (this=0xd384800, state=0x10622d00, level=1) at /home/dev/Impala/be/src/exec/partitioned-hash-join-node.cc:572 impala::PartitionedHashJoinNode::PrepareNextPartition (this=0xd384800, state=0x10622d00) at /home/dev/Impala/be/src/exec/partitioned-hash-join-node.cc:722 impala::PartitionedHashJoinNode::GetNext (this=0xd384800, state=0x10622d00, out_batch=0x7f3e52a28e50, eos=0x7f3e52a28e3f) at /home/dev/Impala/be/src/exec/partitioned-hash-join-node.cc:882 impala::SortNode::SortInput (this=0x12290800, state=0x10622d00) at /home/dev/Impala/be/src/exec/sort-node.cc:155 impala::SortNode::Open (this=0x12290800, state=0x10622d00) at /home/dev/Impala/be/src/exec/sort-node.cc:76 impala::PlanFragmentExecutor::OpenInternal (this=0x10620210) at /home/dev/Impala/be/src/runtime/plan-fragment-executor.cc:334 impala::PlanFragmentExecutor::Open (this=0x10620210) at /home/dev/Impala/be/src/runtime/plan-fragment-executor.cc:320 impala::FragmentMgr::FragmentExecState::Exec (this=0x10620000) at /home/dev/Impala/be/src/service/fragment-exec-state.cc:50 impala::FragmentMgr::FragmentExecThread (this=0x93bf7a0, exec_state=0x10620000) at /home/dev/Impala/be/src/service/fragment-mgr.cc:70 boost::_mfi::mf1::operator() (this=0x143d7420, p=0x93bf7a0, a1=0x10620000) at /usr/include/boost/bind/mem_fn_template.hpp:165 boost::_bi::list2, boost::_bi::value >::operator(), boost::_bi::list0> (this=0x143d7430, f=..., a=...) at /usr/include/boost/bind/bind.hpp:313 boost::_bi::bind_t, boost::_bi::list2, boost::_bi::value > >::operator() (this=0x143d7420) at /usr/include/boost/bind/bind_template.hpp:20 boost::detail::function::void_function_obj_invoker0, boost::_bi::list2, boost::_bi::value > >, void>::invoke (function_obj_ptr=...) at /usr/include/boost/function/function_template.hpp:153 boost::function0::operator() (this=0x7f3e52a29e00) at /usr/include/boost/function/function_template.hpp:767 impala::Thread::SuperviseThread(std::string const&, std::string const&, boost::function, impala::Promise*) (name=..., category=..., functor=..., thread_started=0x7f3e4c895eb0) at /home/dev/Impala/be/src/util/thread.cc:314 boost::_bi::list4, boost::_bi::value, boost::_bi::value >, boost::_bi::value*> >::operator(), impala::Promise*), boost::_bi::list0>(boost::_bi::type, void (*&)(std::string const&, std::string const&, boost::function, impala::Promise*), boost::_bi::list0&, int) (this=0xd4c97c0, f=@0xd4c97b8: 0x142acf4 , impala::Promise*)>, a=...) at /usr/include/boost/bind/bind.hpp:457 boost::_bi::bind_t, impala::Promise*), boost::_bi::list4, boost::_bi::value, boost::_bi::value >, boost::_bi::value*> > >::operator()() (this=0xd4c97b8) at /usr/include/boost/bind/bind_template.hpp:20 boost::detail::thread_data, impala::Promise*), boost::_bi::list4, boost::_bi::value, boost::_bi::value >, boost::_bi::value*> > > >::run() (this=0xd4c9600) at /usr/include/boost/thread/detail/thread.hpp:117 ?? () from /usr/lib/x86_64-linux-gnu/libboost_thread.so.1.54.0 start_thread (arg=0x7f3e52a2a700) at pthread_create.c:312 clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
This may be related to IMPALA-2071
- is duplicated by
-
IMPALA-2071 Failed DCHECK(offset <= OFFSET_MASK >> OFFSET_SHIFT) in buffered-tuple-stream
-
- Resolved
-
- relates to
-
IMPALA-2071 Failed DCHECK(offset <= OFFSET_MASK >> OFFSET_SHIFT) in buffered-tuple-stream
-
- Resolved
-